@@ -10,10 +10,6 @@ var users = require('./routes/users');
 
 var app = express();
 
-// simple in-memory usage store
-var usages = [];
-app.usages = usages;
-
 // view engine setup
 app.set('views', path.join(__dirname, 'views'));
 app.set('view engine', 'jade');
@@ -31,6 +27,9 @@ app.use('/users', users);
 
 // API
 require('./routes/api/usages')(app);
+
+// Connect to DB
+require('./database/db')(app);
 
 // catch 404 and forward to error handler
 app.use(function(req, res, next) {
