@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
+    "mongodb": "^3.1.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
